@@ -4736,3 +4736,11 @@ Fri Jul 28 12:31:35 PDT 2000
 Now with xinerama enabled your alt-tab focus list will appear properly
 centered in the current head.  I think I will add an alt-tab feature to only
 focus on windows in the current head as well (this will be toggle-able)
+
+-------------------------------------------------------------------------------
+
+Fri Jul 28 23:31:29 CEST 2000
+(Christian)
+
+Make this compile again on non-Xinerama machines.
+Hey Mandrake, have mercy with us poor singleheads :)
